--- a/sjfstyles.css
+++ b/sjfstyles.css
@@ -11,6 +11,7 @@ h1{
 }
 .buttontype1{
     padding: 12px;
+    margin: 5px;
     background-color: rgba(360,0,0,1);
     border-radius: 15px;
     text-decoration: none;
@@ -18,6 +19,7 @@ h1{
     font-weight: 500;
     font-size: 16px;
     cursor: pointer;
+    transition: all 0.1s;
 }
 .buttontype1:hover{
     background-color: rgba(360,0,0,0.5);
@@ -96,18 +98,40 @@ h1{
 }
 #Tablediv{
     display: flex;
+    justify-content: center;
 }
-#table1{
-    margin: 24px;
+#tablebuttons{
+    display: flex;
+    scale: 0%;
+    transition: all 0.5s;
+    justify-content: center;
+}
+table{
     border: 1px solid #ECF0F1;
     border-spacing: 0;
-}
-#table2{
-    margin: 24px;
-    border: 1px solid #ECF0F1;
-    border-spacing: 0;
+    border-radius: 5px;
+    transition: all 0.5s;
+    scale: 0%;
 }
 th{
-    padding: 5px 5px 5px 5px;
+    color: #ECF0F1;
+    background-color: rgba(255, 0, 0,0.5);
+    padding: 15px;
     border: 1px solid #ECF0F1;
+}
+th:first-of-type{
+    border-top-left-radius: 5px;
+    border: 1px solid #ECF0F1;
+}
+th:last-of-type{
+    border-top-right-radius: 5px;
+    border: 1px solid #ECF0F1;
+}
+tr{
+
+}
+td{
+    padding: 5px;
+    text-align: center;
+    border:1px solid #ECF0F1;
 }
