--- a/sjfstyles.css
+++ b/sjfstyles.css
@@ -8,6 +8,8 @@
 }
 h1{
     text-align: center;
+    font-size: 35px;
+    margin-bottom: -50px;
 }
 .buttontype1{
     padding: 12px;
@@ -20,6 +22,8 @@ h1{
     font-size: 16px;
     cursor: pointer;
     transition: all 0.1s;
+    margin-top: -25px;
+    margin-bottom: 20px;
 }
 .buttontype1:hover{
     background-color: rgba(360,0,0,0.5);
@@ -86,7 +90,7 @@ h1{
     background-color: red;
     color: #ECF0F1;
     cursor: pointer;
-    margin-top: 15px;
+    margin-top: 35px;
     font-size: 18px;
     font-weight: 500;
     padding: 10px;
@@ -112,6 +116,7 @@ table{
     border-radius: 5px;
     transition: all 0.5s;
     scale: 0%;
+    margin-top: 5px;
 }
 th{
     color: #ECF0F1;
