--- a/sjfstyles.css
+++ b/sjfstyles.css
@@ -158,6 +158,8 @@ td{
     background: transparent;
 }
 h2{
+    margin-top: 25px;
+    margin-bottom: 10px;
     color: #d0e6ec;
     font-size: larger;
     text-align: center;
